--- a/resources/sass/_register.scss
+++ b/resources/sass/_register.scss
@@ -38,6 +38,12 @@
     margin-bottom: 10px;
     background: rgba(255,255,255,.8);
 }
+.input-green{
+    background: lightgreen;
+}
+.input-red{
+    background: darkred;
+}
 .register-reset-btn{
     display: inline-block;
     height: 50px;
