--- a/resources/sass/user/_dataForm.scss
+++ b/resources/sass/user/_dataForm.scss
@@ -54,7 +54,7 @@
         height: 0;
         opacity: 0;
     }
-    .pick-up-a-photo{
+    .pick-up-a-photo,.openPasswdChange{
         padding: 10px 20px;
         border-radius: 10px;
         text-align: center;
@@ -62,6 +62,25 @@
         font-family: "Bebas Neue",sans-serif;
         background: rgba(223,71,35,.4);
         cursor: pointer;
+    }
+    .openPasswdChange{
+        background: rgba(255,255,255,.9);
+        margin: 5px 0px;
+        transition: filter 0.4s;
+    }
+    .openPasswdChange:hover{
+        filter: brightness(70%);
+    }
+    .passwds-container{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 5px;
+        width: calc(90% - 10px);
+        
+    }
+    .hidden{
+        display: none;
     }
     .sex-section,.pierogi-section{
         width: calc(80% - 20px);
